<resources>
    <!-- global -->
    <string name="app_name">Pong Group D</string>
    <string name="back">Back</string>

    <!-- Main activity -->
    <string name="app_header">CIRCUIT BREAKER</string>
    <string name="play_pong">PLAY PONG</string>
    <string name="play_breakout">Play breakout</string>
    <string name="play_golf">Play Golf</string>
    <string name="high_score_button">High Score</string>
    <string name="continue_label">Continue play</string>

    <!-- High Score activity -->
    <string name="breakout">Breakout</string>
    <string name="pong">Pong</string>
    <string name="golf">Golf</string>
    <string name="breakout_high_score">BREAKOUT HIGH SCORE</string>
    <string name="pong_high_score">PONG HIGH SCORE</string>
    <string name="golf_high_score">GOLF HIGH SCORE</string>

    <!-- Pong Mode Chooser activity -->
    <string name="choose_game_mode">CHOOSE GAME MODE</string>
    <string name="single_player">Single player</string>
    <string name="two_player">Two player</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start_game">Start Game</string>

    <!-- Settings activity -->
    <string name="settings">SETTINGS</string>
    <string name="sound_effects">SOUND EFFECTS</string>
    <string name="music">MUSIC</string>
    <string name="colors">COLORS</string>

    <!-- Game Over activity -->
    <string name="game_over">GAME OVER</string>
    <string name="win">WIN</string>
    <string name="player1_win">PLAYER 1 WINS</string>
    <string name="player2_win">PLAYER 2 WINS</string>
    <string name="your_score">YOUR SCORE: %1$d</string>
    <string name="player1_score">PLAYER 1 SCORE: %1$d</string>
    <string name="player2_score">PLAYER 2 SCORE: %1$d</string>
    <string name="games_won">GAMES WON: %1$d</string>
    <string name="save_score">SAVE SCORE</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="save">SAVE</string>
    <string name="score_saved">SCORE SAVED</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>

</resources>